--- a/Untitled0.ipynb
+++ b/Untitled0.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPBKPRkBk5CjBH8X06XJhGT",
+      "authorship_tag": "ABX9TyO/FRNlwTnEfgbjcLRiJteF",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,13 +28,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": 2,
       "metadata": {
         "id": "EP3XLoArgeVG",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "1230148e-6984-4b11-aeae-bdab8962e539"
+        "outputId": "fff5af60-b5ee-4f73-8f7a-46883dcb93bf"
       },
       "outputs": [
         {
@@ -43,7 +43,12 @@
           "text": [
             "muttahari\n",
             "21\n",
-            "RPE\n",
+            "laki - laki\n",
+            "islam\n",
+            "futsal\n",
+            "griya permata batu aji blok.b/37\n",
+            "teknik elektro\n",
+            "teknologi rekayasa pembangkit energi\n",
             "3\n",
             "Pemerograman Dasar\n",
             "False\n"
@@ -55,7 +60,12 @@
         "\n",
         "nama = \"muttahari\"\n",
         "umur = 21\n",
-        "jurusan = \"RPE\"\n",
+        "jenis_kelamin = \"laki - laki\"\n",
+        "agama = \"islam\"\n",
+        "hobi = \"futsal\"\n",
+        "alamat = \"griya permata batu aji blok.b/37\"\n",
+        "jurusan = \"teknik elektro\"\n",
+        "program_studi = \"teknologi rekayasa pembangkit energi\"\n",
         "semester = 3\n",
         "matakuliah = 'Pemerograman Dasar'\n",
         "status_lulus = False\n",
@@ -63,7 +73,12 @@
         "\n",
         "print (nama)\n",
         "print (umur)\n",
+        "print (jenis_kelamin)\n",
+        "print (agama)\n",
+        "print (hobi)\n",
+        "print (alamat)\n",
         "print (jurusan)\n",
+        "print (program_studi)\n",
         "print (semester)\n",
         "print (matakuliah)\n",
         "print (status_lulus)\n",
