--- a/Untitled1.ipynb
+++ b/Untitled1.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyO/gMVf3uZzH19S/zG82PH2",
+      "authorship_tag": "ABX9TyPTWU4FRZ2uq5/3V4YfMBkX",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,105 +28,88 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "7mfcLh6wS9LB",
-        "outputId": "31a942fc-878f-42bb-8e69-f919a05eec11"
-      },
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Masukkan tahun: 2004\n",
-            "Apakah tahun kabisat?  True\n"
-          ]
-        }
-      ],
       "source": [
-        "tahun = int(input(\"Masukkan tahun: \"))\n",
+        "print(\"=\"*30)\n",
+        "print(\"SELAMAT DATANG DI WARUNG ARI\")\n",
+        "print(\"=\"*30)\n",
+        "print(\"Menu Belanja:\")\n",
+        "print(\"1. Oli Mesin         - Rp 45.000\")\n",
+        "print(\"2. Shockbreaker      - Rp 150.000\")\n",
+        "print(\"3. Busi              - Rp 15.000\")\n",
+        "print(\"4. Kampas Rem        - Rp 25.000\")\n",
+        "print(\"5. Rantai            - Rp 50.000\")\n",
+        "print(\"6. Aki               - Rp 100.000\")\n",
+        "print(\"=\"*30)\n",
         "\n",
-        "# Ekspresi logika langsung\n",
-        "kabisat = (tahun % 4 == 0 and tahun % 100 != 0) or (tahun % 400 == 0)\n",
+        "pilihan_str = input(\"Silakan masukkan nomor pilihan Anda (1-6): \")\n",
+        "pilihan = int(pilihan_str)\n",
+        "nama_pesanan = \"\"\n",
+        "harga = 0\n",
         "\n",
-        "print(\"Apakah tahun kabisat? \", kabisat)\n"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "# Program operasi aritmatika sederhana\n",
-        "a = int(input(\"Masukkan angka pertama: \"))\n",
-        "b = int(input(\"Masukkan angka kedua: \"))\n",
+        "if pilihan == 1:\n",
+        "    nama_pesanan = \"Oli Mesin\"\n",
+        "    harga = 45000\n",
+        "elif pilihan == 2:\n",
+        "    nama_pesanan = \"Shockbreaker\"\n",
+        "    harga = 150000\n",
+        "elif pilihan == 3:\n",
+        "    nama_pesanan = \"Busi\"\n",
+        "    harga = 15000\n",
+        "elif pilihan == 4:\n",
+        "    nama_pesanan = \"Kampas Rem\"\n",
+        "    harga = 25000\n",
+        "elif pilihan == 5:\n",
+        "    nama_pesanan = \"Rantai\"\n",
+        "    harga = 50000\n",
+        "elif pilihan == 6:\n",
+        "    nama_pesanan = \"Aki\"\n",
+        "    harga = 100000\n",
         "\n",
-        "print(\"Hasil Penjumlahan:\", a + b)\n",
-        "print(\"Hasil Pengurangan:\", a - b)\n",
-        "print(\"Hasil Perkalian:\", a * b)\n",
-        "print(\"Hasil Pembagian:\", a / b)\n"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "ESF1-diIUHAL",
-        "outputId": "73459739-e3ed-4d28-c581-43ec8d6f6003"
-      },
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Masukkan angka pertama: 10\n",
-            "Masukkan angka kedua: 05\n",
-            "Hasil Penjumlahan: 15\n",
-            "Hasil Pengurangan: 5\n",
-            "Hasil Perkalian: 50\n",
-            "Hasil Pembagian: 2.0\n"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "# Program Kasir Sederhana (tanpa if)\n",
+        "else:\n",
+        "    print(\"Maaf, pilihan menu tidak valid. Silakan jalankan ulang program.\")\n",
+        "    exit()\n",
         "\n",
-        "# Input subtotal belanja\n",
-        "subtotal = float(input(\"Masukkan total belanja (Rp): \"))\n",
+        "print(f\"Anda memesan: {nama_pesanan} dengan harga Rp {harga}\")\n",
         "\n",
-        "# Input status member\n",
-        "member = input(\"Apakah pelanggan member? (ya/tidak): \").lower() == \"ya\"\n",
+        "# Hitung diskon\n",
+        "diskon = 0\n",
+        "if harga >= 50000:\n",
+        "    diskon = 0.7\n",
+        "elif harga >= 30000:\n",
+        "    diskon = 0.5\n",
+        "elif harga >= 20000:\n",
+        "    diskon = 0.3\n",
+        "else:\n",
+        "    diskon = 0\n",
         "\n",
-        "# Hitung diskon (pakai logika langsung tanpa if)\n",
-        "diskon = 0.15 * subtotal * (member and subtotal > 100000)\n",
+        "potongan = int(harga * diskon)\n",
+        "total_bayar = harga - potongan\n",
         "\n",
-        "# Harga setelah diskon\n",
-        "harga_setelah_diskon = subtotal - diskon\n",
+        "print(\"=\"*30)\n",
+        "print(f\"Total Belanja : Rp {harga}\")\n",
+        "print(f\"Diskon        : {int(diskon*100)}% (Rp {potongan})\")\n",
+        "print(f\"Total Bayar   : Rp {total_bayar}\")\n",
+        "print(\"=\"*30)\n",
         "\n",
-        "# Hitung PPN 11%\n",
-        "ppn = 0.11 * harga_setelah_diskon\n",
-        "\n",
-        "# Total akhir\n",
-        "total_akhir = harga_setelah_diskon + ppn\n",
-        "\n",
-        "# Output\n",
-        "print(\"\\n--- Struk Belanja ---\")\n",
-        "print(f\"Subtotal             : Rp {subtotal:,.0f}\")\n",
-        "print(f\"Diskon               : Rp {diskon:,.0f}\")\n",
-        "print(f\"Harga Setelah Diskon : Rp {harga_setelah_diskon:,.0f}\")\n",
-        "print(f\"PPN (11%)            : Rp {ppn:,.0f}\")\n",
-        "print(f\"Total Akhir          : Rp {total_akhir:,.0f}\")\n"
+        "uang_dibayar = int(input(f\"Masukkan jumlah uang Anda: Rp \"))\n",
+        "if uang_dibayar >= total_bayar:\n",
+        "    kembalian = uang_dibayar - total_bayar\n",
+        "    print(\"\\n=== Struk Pembayaran ===\")\n",
+        "    print(f\"Pesanan       : {nama_pesanan}\")\n",
+        "    print(f\"Total Bayar   : Rp {total_bayar}\")\n",
+        "    print(f\"Uang Dibayar  : Rp {uang_dibayar}\")\n",
+        "    print(f\"Kembalian     : Rp {kembalian}\")\n",
+        "    print(\"Terima kasih telah berbelanja!\")\n",
+        "else:\n",
+        "    kekurangan = total_bayar - uang_dibayar\n",
+        "    print(f\"Maaf, uang Anda kurang sebesar Rp {kekurangan}\")\n"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "YBSTXB47tiyx",
-        "outputId": "74832c7c-23e3-4748-aba5-c2b176af96f7"
+        "id": "9GkWchBCxwqU",
+        "outputId": "57ebd973-dcf6-4189-ca00-0225b4c5243f"
       },
       "execution_count": null,
       "outputs": [
@@ -134,15 +117,32 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Masukkan total belanja (Rp): 15000000\n",
-            "Apakah pelanggan member? (ya/tidak): ya\n",
+            "==============================\n",
+            "SELAMAT DATANG DI WARUNG ARI\n",
+            "==============================\n",
+            "Menu Belanja:\n",
+            "1. Oli Mesin         - Rp 45.000\n",
+            "2. Shockbreaker      - Rp 150.000\n",
+            "3. Busi              - Rp 15.000\n",
+            "4. Kampas Rem        - Rp 25.000\n",
+            "5. Rantai            - Rp 50.000\n",
+            "6. Aki               - Rp 100.000\n",
+            "==============================\n",
+            "Silakan masukkan nomor pilihan Anda (1-6): 6\n",
+            "Anda memesan: Aki dengan harga Rp 100000\n",
+            "==============================\n",
+            "Total Belanja : Rp 100000\n",
+            "Diskon        : 70% (Rp 70000)\n",
+            "Total Bayar   : Rp 30000\n",
+            "==============================\n",
+            "Masukkan jumlah uang Anda: Rp 200000\n",
             "\n",
-            "--- Struk Belanja ---\n",
-            "Subtotal             : Rp 15,000,000\n",
-            "Diskon               : Rp 2,250,000\n",
-            "Harga Setelah Diskon : Rp 12,750,000\n",
-            "PPN (11%)            : Rp 1,402,500\n",
-            "Total Akhir          : Rp 14,152,500\n"
+            "=== Struk Pembayaran ===\n",
+            "Pesanan       : Aki\n",
+            "Total Bayar   : Rp 30000\n",
+            "Uang Dibayar  : Rp 200000\n",
+            "Kembalian     : Rp 170000\n",
+            "Terima kasih telah berbelanja!\n"
           ]
         }
       ]
