--- a/Untitled0.ipynb
+++ b/Untitled0.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyP7ZKv6WbKo7NGgG2UTGFKN",
+      "authorship_tag": "ABX9TyMb8qyRnOf/DM5XRIF4QJsj",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,176 +28,77 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "vScFMkde1WUl",
-        "outputId": "0d421741-1a55-4078-8acd-dc21c7953130"
-      },
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Masukkan angka: 10\n",
-            "Kelipatan 5\n"
-          ]
-        }
-      ],
       "source": [
-        "angka = int(input(\"Masukkan angka: \"))\n",
-        "if angka % 5 == 0:\n",
-        "    print(\"Kelipatan 5\")\n",
-        "else:\n",
-        "    print(\"Bukan kelipatan 5\")\n"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "tahun = int(input(\"Masukkan tahun: \"))\n",
+        "def data_mahasiswa(nama, umur, aktif, nilai):\n",
+        "    # tipe data primitif: string, int, bool\n",
+        "    # tipe data non primitif: list, tuple, dictionary, set\n",
         "\n",
-        "if tahun % 400 == 0:\n",
-        "    print(\"Kabisat\")\n",
-        "elif tahun % 4 == 0 and tahun % 100 != 0:\n",
-        "    print(\"Kabisat\")\n",
-        "else:\n",
-        "    print(\"Bukan Kabisat\")\n"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "GnsssxtD1nN0",
-        "outputId": "52e7c6d6-ee1c-4404-8f7d-494cfe456133"
-      },
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Masukkan tahun: 2004\n",
-            "Kabisat\n"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "print(\"Soal: 10 + 5 = ?\")\n",
-        "jawaban = int(input(\"Jawab: \"))\n",
+        "    if not aktif:\n",
+        "        return f\"{nama} belum aktif kuliah.\"\n",
         "\n",
-        "if jawaban == 15:\n",
-        "    print(\"Benar!\")\n",
-        "else:\n",
-        "    print(\"Salah, jawabannya adalah 15\")\n"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "mx147AW81uA-",
-        "outputId": "0ed19faa-ae74-41d7-f7e7-ee5b13e2ceba"
-      },
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Soal: 10 + 5 = ?\n",
-            "Jawab: 7\n",
-            "Salah, jawabannya adalah 15\n"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "bulan = int(input(\"Masukkan nomor bulan (1-12): \"))\n",
+        "    # hitung rata-rata nilai dengan perulangan for\n",
+        "    total = 0\n",
+        "    for n in nilai:\n",
+        "        total += n\n",
+        "    rata = total / len(nilai)\n",
         "\n",
-        "if bulan == 1:\n",
-        "    print(\"Januari\")\n",
-        "elif bulan == 2:\n",
-        "    print(\"Februari\")\n",
-        "elif bulan == 3:\n",
-        "    print(\"Maret\")\n",
-        "elif bulan == 4:\n",
-        "    print(\"April\")\n",
-        "elif bulan == 5:\n",
-        "    print(\"Mei\")\n",
-        "elif bulan == 6:\n",
-        "    print(\"Juni\")\n",
-        "elif bulan == 7:\n",
-        "    print(\"Juli\")\n",
-        "elif bulan == 8:\n",
-        "    print(\"Agustus\")\n",
-        "elif bulan == 9:\n",
-        "    print(\"September\")\n",
-        "elif bulan == 10:\n",
-        "    print(\"Oktober\")\n",
-        "elif bulan == 11:\n",
-        "    print(\"November\")\n",
-        "elif bulan == 12:\n",
-        "    print(\"Desember\")\n",
-        "else:\n",
-        "    print(\"Input salah\")\n"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "ZoNppaWU131q",
-        "outputId": "8918ac98-6d1c-46b6-d66b-fbd937f8c619"
-      },
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Masukkan nomor bulan (1-12): 5\n",
-            "Mei\n"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "jam = int(input(\"Masukkan jam (0-23): \"))\n",
+        "    # percabangan if, elif, else\n",
+        "    if rata >= 85:\n",
+        "        kategori = \"Sangat Baik\"\n",
+        "    elif rata >= 70:\n",
+        "        kategori = \"Cukup\"\n",
+        "    else:\n",
+        "        kategori = \"Kurang\"\n",
         "\n",
-        "if 0 <= jam <= 11:\n",
-        "    print(\"Selamat Pagi\")\n",
-        "elif 12 <= jam <= 15:\n",
-        "    print(\"Selamat Siang\")\n",
-        "elif 16 <= jam <= 18:\n",
-        "    print(\"Selamat Sore\")\n",
-        "elif 19 <= jam <= 23:\n",
-        "    print(\"Selamat Malam\")\n",
-        "else:\n",
-        "    print(\"Input salah\")\n"
+        "    # simpan data ke dictionary\n",
+        "    data = {\n",
+        "        \"Nama\": nama,\n",
+        "        \"Umur\": umur,\n",
+        "        \"Aktif\": aktif,\n",
+        "        \"Nilai\": tuple(nilai),      # ubah list jadi tuple\n",
+        "        \"Rata-rata\": rata,\n",
+        "        \"Kategori\": kategori,\n",
+        "        \"Hobi\": {\"membaca\", \"ngoding\"}  # tipe set\n",
+        "    }\n",
+        "\n",
+        "    # tampilkan data dengan perulangan while\n",
+        "    print(\"\\nData Mahasiswa:\")\n",
+        "    i = 0\n",
+        "    keys = list(data.keys())\n",
+        "    while i < len(keys):\n",
+        "        print(f\"- {keys[i]} : {data[keys[i]]}\")\n",
+        "        i += 1\n",
+        "\n",
+        "    return f\"\\nKesimpulan: {nama} termasuk kategori {kategori}\"\n",
+        "\n",
+        "\n",
+        "# Pemanggilan fungsi\n",
+        "print(data_mahasiswa(\"Muttahari\", 20, True, [80, 90, 75, 85]))\n"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "gQ-G2BkP2B8n",
-        "outputId": "cdeb9c22-44d2-4cb8-c3a4-a404398d2f4c"
+        "id": "4E4n6TWWuAno",
+        "outputId": "45c3dcbc-6eaf-431a-ff5a-9e53325cab00"
       },
-      "execution_count": null,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Masukkan jam (0-23): 10\n",
-            "Selamat Pagi\n"
+            "\n",
+            "Data Mahasiswa:\n",
+            "- Nama : Muttahari\n",
+            "- Umur : 20\n",
+            "- Aktif : True\n",
+            "- Nilai : (80, 90, 75, 85)\n",
+            "- Rata-rata : 82.5\n",
+            "- Kategori : Cukup\n",
+            "- Hobi : {'membaca', 'ngoding'}\n",
+            "\n",
+            "Kesimpulan: Muttahari termasuk kategori Cukup\n"
           ]
         }
       ]
