--- a/Untitled1.ipynb
+++ b/Untitled1.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPTWU4FRZ2uq5/3V4YfMBkX",
+      "authorship_tag": "ABX9TyP/tnsTzAfFu122iQ3EsG4B",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,88 +28,49 @@
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "xasNRYlpacxX",
+        "outputId": "40f18e99-8b0c-4bad-cc7a-18ead4a1d8b1"
+      },
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Sistem siap. Selamat datang kembali di sesi praktikum.\n"
+          ]
+        }
+      ],
       "source": [
-        "print(\"=\"*30)\n",
-        "print(\"SELAMAT DATANG DI WARUNG ARI\")\n",
-        "print(\"=\"*30)\n",
-        "print(\"Menu Belanja:\")\n",
-        "print(\"1. Oli Mesin         - Rp 45.000\")\n",
-        "print(\"2. Shockbreaker      - Rp 150.000\")\n",
-        "print(\"3. Busi              - Rp 15.000\")\n",
-        "print(\"4. Kampas Rem        - Rp 25.000\")\n",
-        "print(\"5. Rantai            - Rp 50.000\")\n",
-        "print(\"6. Aki               - Rp 100.000\")\n",
-        "print(\"=\"*30)\n",
+        "def sapa_praktikan():\n",
+        "    \"\"\"Mencetak pesan sambutan dasar.\"\"\"\n",
+        "    print(\"Sistem siap. Selamat datang kembali di sesi praktikum.\")\n",
         "\n",
-        "pilihan_str = input(\"Silakan masukkan nomor pilihan Anda (1-6): \")\n",
-        "pilihan = int(pilihan_str)\n",
-        "nama_pesanan = \"\"\n",
-        "harga = 0\n",
+        "# Pemanggilan:\n",
+        "sapa_praktikan()\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def hitung_volume_kubus(sisi):\n",
+        "    \"\"\"Menghitung volume kubus dari panjang sisinya.\"\"\"\n",
+        "    return sisi ** 3\n",
         "\n",
-        "if pilihan == 1:\n",
-        "    nama_pesanan = \"Oli Mesin\"\n",
-        "    harga = 45000\n",
-        "elif pilihan == 2:\n",
-        "    nama_pesanan = \"Shockbreaker\"\n",
-        "    harga = 150000\n",
-        "elif pilihan == 3:\n",
-        "    nama_pesanan = \"Busi\"\n",
-        "    harga = 15000\n",
-        "elif pilihan == 4:\n",
-        "    nama_pesanan = \"Kampas Rem\"\n",
-        "    harga = 25000\n",
-        "elif pilihan == 5:\n",
-        "    nama_pesanan = \"Rantai\"\n",
-        "    harga = 50000\n",
-        "elif pilihan == 6:\n",
-        "    nama_pesanan = \"Aki\"\n",
-        "    harga = 100000\n",
-        "\n",
-        "else:\n",
-        "    print(\"Maaf, pilihan menu tidak valid. Silakan jalankan ulang program.\")\n",
-        "    exit()\n",
-        "\n",
-        "print(f\"Anda memesan: {nama_pesanan} dengan harga Rp {harga}\")\n",
-        "\n",
-        "# Hitung diskon\n",
-        "diskon = 0\n",
-        "if harga >= 50000:\n",
-        "    diskon = 0.7\n",
-        "elif harga >= 30000:\n",
-        "    diskon = 0.5\n",
-        "elif harga >= 20000:\n",
-        "    diskon = 0.3\n",
-        "else:\n",
-        "    diskon = 0\n",
-        "\n",
-        "potongan = int(harga * diskon)\n",
-        "total_bayar = harga - potongan\n",
-        "\n",
-        "print(\"=\"*30)\n",
-        "print(f\"Total Belanja : Rp {harga}\")\n",
-        "print(f\"Diskon        : {int(diskon*100)}% (Rp {potongan})\")\n",
-        "print(f\"Total Bayar   : Rp {total_bayar}\")\n",
-        "print(\"=\"*30)\n",
-        "\n",
-        "uang_dibayar = int(input(f\"Masukkan jumlah uang Anda: Rp \"))\n",
-        "if uang_dibayar >= total_bayar:\n",
-        "    kembalian = uang_dibayar - total_bayar\n",
-        "    print(\"\\n=== Struk Pembayaran ===\")\n",
-        "    print(f\"Pesanan       : {nama_pesanan}\")\n",
-        "    print(f\"Total Bayar   : Rp {total_bayar}\")\n",
-        "    print(f\"Uang Dibayar  : Rp {uang_dibayar}\")\n",
-        "    print(f\"Kembalian     : Rp {kembalian}\")\n",
-        "    print(\"Terima kasih telah berbelanja!\")\n",
-        "else:\n",
-        "    kekurangan = total_bayar - uang_dibayar\n",
-        "    print(f\"Maaf, uang Anda kurang sebesar Rp {kekurangan}\")\n"
+        "# Pemanggilan:\n",
+        "panjang_sisi = 5\n",
+        "print(f\"Volume kubus dengan sisi {panjang_sisi} adalah: {hitung_volume_kubus(panjang_sisi)}\")\n"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "9GkWchBCxwqU",
-        "outputId": "57ebd973-dcf6-4189-ca00-0225b4c5243f"
+        "id": "UVDeU7xTazeq",
+        "outputId": "f4dff1a4-989b-4dba-8ca5-9355667285a0"
       },
       "execution_count": null,
       "outputs": [
@@ -117,32 +78,157 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "==============================\n",
-            "SELAMAT DATANG DI WARUNG ARI\n",
-            "==============================\n",
-            "Menu Belanja:\n",
-            "1. Oli Mesin         - Rp 45.000\n",
-            "2. Shockbreaker      - Rp 150.000\n",
-            "3. Busi              - Rp 15.000\n",
-            "4. Kampas Rem        - Rp 25.000\n",
-            "5. Rantai            - Rp 50.000\n",
-            "6. Aki               - Rp 100.000\n",
-            "==============================\n",
-            "Silakan masukkan nomor pilihan Anda (1-6): 6\n",
-            "Anda memesan: Aki dengan harga Rp 100000\n",
-            "==============================\n",
-            "Total Belanja : Rp 100000\n",
-            "Diskon        : 70% (Rp 70000)\n",
-            "Total Bayar   : Rp 30000\n",
-            "==============================\n",
-            "Masukkan jumlah uang Anda: Rp 200000\n",
-            "\n",
-            "=== Struk Pembayaran ===\n",
-            "Pesanan       : Aki\n",
-            "Total Bayar   : Rp 30000\n",
-            "Uang Dibayar  : Rp 200000\n",
-            "Kembalian     : Rp 170000\n",
-            "Terima kasih telah berbelanja!\n"
+            "Volume kubus dengan sisi 5 adalah: 125\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def hitung_rata_rata(data_nilai):\n",
+        "    \"\"\"Menghitung rata-rata dari list angka menggunakan perulangan for.\"\"\"\n",
+        "    total = 0\n",
+        "\n",
+        "    for nilai in data_nilai:\n",
+        "        total += nilai\n",
+        "\n",
+        "    if total > 0:\n",
+        "        return total / len(data_nilai)\n",
+        "    return 0\n",
+        "\n",
+        "# Pemanggilan:\n",
+        "nilai_praktikan = [85, 78, 92, 65, 90]\n",
+        "print(f\"Nilai rata-rata kelas adalah: {hitung_rata_rata(nilai_praktikan)}\")\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "HVSyBAaia7dm",
+        "outputId": "66d9eacd-af10-4981-d701-9b19a2d5f480"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Nilai rata-rata kelas adalah: 82.0\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def tentukan_predikat(skor):\n",
+        "    \"\"\"Menentukan predikat (A, B, C, D, E) berdasarkan skor.\"\"\"\n",
+        "    if skor >= 85:\n",
+        "        return \"A\"\n",
+        "    elif skor >= 70:\n",
+        "        return \"B\"\n",
+        "    elif skor >= 60:\n",
+        "        return \"C\"\n",
+        "    elif skor >= 50:\n",
+        "        return \"D\"\n",
+        "    else:\n",
+        "        return \"E\"\n",
+        "\n",
+        "# Pemanggilan:\n",
+        "print(f\"Skor 75 mendapat predikat: {tentukan_predikat(75)}\")\n",
+        "print(f\"Skor 48 mendapat predikat: {tentukan_predikat(48)}\")\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "DfBr85wxbBmP",
+        "outputId": "a9a00272-988f-4040-c58c-b451a6504734"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Skor 75 mendapat predikat: B\n",
+            "Skor 48 mendapat predikat: E\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def hitung_faktorial(n):\n",
+        "    \"\"\"Menghitung faktorial dari bilangan positif n.\"\"\"\n",
+        "    hasil = 1\n",
+        "\n",
+        "    while n > 1:\n",
+        "        hasil *= n\n",
+        "        n -= 1\n",
+        "    return hasil\n",
+        "\n",
+        "# Pemanggilan:\n",
+        "bilangan_n = 4\n",
+        "print(f\"Faktorial dari {bilangan_n} adalah: {hitung_faktorial(bilangan_n)}\")\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "qh2OmpyTbHtJ",
+        "outputId": "90808c1e-0854-41fd-f855-d4fffdc573c6"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Faktorial dari 4 adalah: 24\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def analisis_suhu(data_suhu):\n",
+        "    \"\"\"Menghitung jumlah hari Panas dan Dingin dari data_suhu.\"\"\"\n",
+        "    panas_count = 0\n",
+        "    dingin_count = 0\n",
+        "\n",
+        "    for suhu in data_suhu:\n",
+        "        if suhu >= 35:\n",
+        "            panas_count += 1\n",
+        "        elif suhu <= 15:\n",
+        "            dingin_count += 1\n",
+        "\n",
+        "    return panas_count, dingin_count\n",
+        "\n",
+        "# Pemanggilan:\n",
+        "suhu_mingguan = [36, 30, 14, 25, 38, 16, 28]\n",
+        "jumlah_panas, jumlah_dingin = analisis_suhu(suhu_mingguan)\n",
+        "print(f\"Jumlah hari Panas (>=35°C): {jumlah_panas}\")\n",
+        "print(f\"Jumlah hari Dingin (<=15°C): {jumlah_dingin}\")\n"
+      ],
+      "metadata": {
+        "id": "5oigrKhkbNYl",
+        "outputId": "df06e04a-e760-4beb-b2df-1dadb78f3e2b",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Jumlah hari Panas (>=35°C): 2\n",
+            "Jumlah hari Dingin (<=15°C): 1\n"
           ]
         }
       ]
